<resources>
    <string name="app_name">fhir-device</string>
    <string name="main_page">Main Page</string>
    <string name="listing">Listing</string>
    <string name="add">Add</string>
    <string name="home_title">FHIR-Device</string>
    <string name="home_description">This Compulsory program was created during the Mobile Application Frameworks course
        (University of Szeged) in 2021. The task was to create a web application that puts CRUD operations into practice
        using the resource Device of the FHIR standard.
    </string>
    <string name="home_page_image_description">home_page_image</string>
    <string name="author">Madarász Máté</string>
    <string name="add_new_device">Add New Device</string>
    <string name="manufacturer">Name of device manufacturer</string>
    <string name="manufacturer_date">Date when the device was made</string>
    <string name="serial_number">Serial number assigned by the manufacturer</string>
    <string name="device_name">The name of the device</string>
    <string name="device_type">The kind or type of device</string>
    <string name="placeholder">Nev</string>
    <string name="button_back">Back</string>
    <string name="button_submit">Submit</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="date_placeholder">Date when the device was made</string>
    <string name="add_title">Add New Device</string>
    <string name="list_title">Listing Devices</string>
    <string name="button_update">Update</string>
    <string name="update_title">Update Device</string>
    <string name="device_name_label">Device Name:</string>
    <string name="device_type_label">Device type:</string>
    <string name="manufacturer_label">Manufacturer:</string>
    <string name="serial_number_label">Serial number:</string>

    <string-array name="statuses">
        <item>active</item>
        <item>inactive</item>
        <item>entered-in-error</item>
        <item>unknown</item>
    </string-array>
</resources>
