<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/main"
            android:title="@string/main_page"
            app:showAsAction="ifRoom"
            android:orderInCategory="1"
            android:icon="@drawable/ic_home"
    />
    <item
            android:id="@+id/listing"
            android:title="@string/listing"
            app:showAsAction="ifRoom"
            android:orderInCategory="2"
            android:icon="@drawable/ic_list"
    />
    <item
            android:id="@+id/add"
            android:title="@string/add"
            app:showAsAction="ifRoom"
            android:orderInCategory="3"
            android:icon="@drawable/ic_add"
    />
</menu>
