<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <LinearLayout
            android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="vertical"
                  android:background="@color/secondary_dark"
                  android:gravity="top"
    >
        <TextView
                android:text="@string/update_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"
        />
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/primary_cyan"
                android:layout_marginTop="8dp"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:ems="10"
                    android:layout_marginTop="8dp"
                    android:text="@string/device_name_label"
                    android:gravity="start" tools:ignore="RtlCompat"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:ems="10"
                    android:layout_marginTop="8dp"
                    android:id="@+id/name_device_edit" android:gravity="right" tools:ignore="RtlCompat"/>
        </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:text="@string/device_type_label"
                android:gravity="start" tools:ignore="RtlCompat"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/device_type"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:id="@+id/type_edit" android:gravity="center_horizontal"
        />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:text="@string/manufacturer_label"
                android:gravity="start" tools:ignore="RtlCompat"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/manufacturer"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:id="@+id/manufacturer_name_edit" android:gravity="center_horizontal"
                android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:text="@string/serial_number_label"
                android:gravity="start" tools:ignore="RtlCompat"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/serial_number"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:id="@+id/serial_number_edit" android:gravity="center_horizontal"
                android:layout_marginTop="8dp" android:textColorHint="@color/white"/>
    </LinearLayout>
        <Spinner
                android:id="@+id/status_spinner_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

        />
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/primary_cyan"
                android:layout_marginTop="8dp"
                android:id="@+id/view"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/button_back"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/primary_cyan"
                    android:onClick="back"
                    android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"/>
            <Button
                    android:text="@string/button_update"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/primary_cyan"
                    android:onClick="updateDevice"
                    android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/primary_cyan"
                android:layout_marginTop="8dp"
                android:id="@+id/view2"/>
    </LinearLayout>
</ScrollView>
