<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="vertical"
                  android:background="@color/secondary_dark"
                  android:gravity="top"
                  android:textColor="#FF0000"
    >
        <TextView
                android:text="@string/add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"
        />
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/primary_cyan"
                android:layout_marginTop="8dp"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/device_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:id="@+id/name_device" android:gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/device_type"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:id="@+id/type" android:gravity="center_horizontal"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/manufacturer"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:id="@+id/manufacturer_name" android:gravity="center_horizontal"
                android:layout_marginTop="8dp"/>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/manufacturer_date"
                android:onClick="openDatePicker"
                android:text="@string/date_placeholder"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/white"
                android:backgroundTint="@color/secondary_dark"
                style="?android:spinnerStyle"
        />
    <!--    <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/manufacturer_date"
                android:hint="@string/manufacturer_date"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"/>-->
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/serial_number"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:ems="10"
                android:id="@+id/serial_number" android:gravity="center_horizontal"
                android:layout_marginTop="8dp" android:textColorHint="@color/white"/>
        <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

        />
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/primary_cyan"
                android:layout_marginTop="8dp"
                android:id="@+id/view"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/button_back"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/primary_cyan"
                    android:onClick="backToHomePage"
                    android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"/>
            <Button
                    android:text="@string/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/primary_cyan"
                    android:onClick="addNewDevice"
                    android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/primary_cyan"
                android:layout_marginTop="8dp"
                android:id="@+id/view2"/>
    </LinearLayout>
</ScrollView>
