<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/secondary_dark"
>
    <TextView
            android:text="@string/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_cyan"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/home_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.003"
            android:layout_marginTop="8dp" android:gravity="center_horizontal"/>
    <ImageView
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/home" android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/home_page_image_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>
